k8s-cluster-configuration/applications/justcodexit/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: justcodexit-service
spec:
  selector:
    app: justcodexit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
